fix ABOUT social links layout on mobile

--- a/src/sass/3-modules/_social-links.sass
+++ b/src/sass/3-modules/_social-links.sass
@@ -36,7 +36,4 @@
 			// transform prop reserved by animation styles
 			margin-top: 1rem
 			margin-bottom: -1rem
-			
-		.break-on-mobile
-			flex: 1 1 100%
 				
